exports[`VerticalList with all attributes 1`] = `
<ul
  className="list-vertical"
>
  <li>
    <article>
      <h3>
        <a
          href="http://hello.world"
        >
          Hello World
        </a>
      </h3>
      <div
        className="meta"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<time datetime="2016-05-08 00:00">08 May 2016</time> <a href="#" rel="author">Author</a>",
          }
        }
      />
      <p>
        The Digital Transformation Office (DTO) was established as an executive agency in July 2015. Its mission is to lead the […]
      </p>
    </article>
    <figure>
      <img
        alt="Default image for items without an image specified"
        src="/img-placeholder.gif"
      />
    </figure>
  </li>
</ul>
`;

exports[`VerticalList with no attributes 1`] = `<span />`;

exports[`VerticalList with required attributes 1`] = `
<ul
  className="list-vertical"
>
  <li>
    <article>
      <h3>
        <a
          href="http://hello.world"
        >
          Hello World
        </a>
      </h3>
      
      
    </article>
    
  </li>
</ul>
`;

exports[`test VerticalList with all attributes 1`] = `
<ul
  className="list-vertical">
  <li>
    <article>
      <h3>
        <a
          href="http://hello.world">
          Hello World
        </a>
      </h3>
      <div
        className="meta"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<time datetime=\"2016-05-08 00:00\">08 May 2016</time> <a href=\"#\" rel=\"author\">Author</a>",
          }
        } />
      <p>
        The Digital Transformation Office (DTO) was established as an executive agency in July 2015. Its mission is to lead the […]
      </p>
    </article>
    <figure>
      <img
        alt="Default image for items without an image specified"
        src="/img-placeholder.gif" />
    </figure>
  </li>
</ul>
`;

exports[`test VerticalList with no attributes 1`] = `<span />`;

exports[`test VerticalList with required attributes 1`] = `
<ul
  className="list-vertical">
  <li>
    <article>
      <h3>
        <a
          href="http://hello.world">
          Hello World
        </a>
      </h3>
      
      
    </article>
    
  </li>
</ul>
`;
